# AudioDownloader

./: .env.example  .gitignore  AudioDL.spec  CONTRIBUTING.md  LICENSE  README.md  cookies.txt  main.py  pyproject.toml  requeriments.txt  requirements.txt  run_gui.py  settings.json  test.py
configs/: default.yaml
scripts/: dev_run_tkinter.py
src/audiodl/: __main__.py
src/audiodl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/audiodl/core/: logging.py  models.py  pipeline.py  pipline.py  settings.py
src/audiodl/providers/: base.py
src/audiodl/providers/apple_music/: provider.py
src/audiodl/providers/spotify/: provider.py
src/audiodl/providers/youtube/: provider.py  ytdlp_runner.py
src/audiodl/ui/tkinter/: __init__.py  app.py
src/audiodl/ui/tkui/: __main__.py
