[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiodl"
version = "0.1.0"
description = "Extensible audio downloader with pluggable providers (YouTube, Spotify, Apple Music, Mixcloud)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ruben", email = "ruben@optimaiberica.es" }
]
keywords = ["audio", "downloader", "youtube", "spotify", "ffmpeg", "yt-dlp"]

dependencies = [
    "yt-dlp>=2024.10.0",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "rich>=13.7",          # logging / progreso CLI
]

[project.optional-dependencies]
ui = [
    # Tkinter viene con Python, esto es solo por claridad futura
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.1",
    "ruff>=0.2",
    "mypy>=1.8"
]

[project.scripts]
audiodl = "audiodl.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
